--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ header {
 	background-color: black;
 	height: 15%;
 	width: 100%;
+	z-index: 1;
+	float: left;
+	top: 0;
 }
 nav {
 	border-top: 1px solid #7f7f7f;
@@ -35,20 +38,51 @@ h1, h2, h3, h4, h5, h6 {
 	color: white;
 }
 body {
-	background-color: black;
+	background-color: #1c1c1c;
 }
 footer {
 	position: fixed;
 	margin-top: 25px;
 	border-top: 1px solid #7f7f7f;
-	height: 10%;
-	position: sticky;
 	bottom: 0;
 	background-color: black;
+	z-index: 1;
+	margin-bottom: 0;
+	float: left;
+	width: 100%;
+}
+.main {
+	margin-top: 5%;
+	padding: 10px;
+	z-index: 0;
+	padding-top: 20px;
+}
+.left {
+	color: white;
+	width: 10%;
+	padding-top: 20%;
+	text-align: center;
+	font-size: 300%;
+}
+.left a{
+	color: white;
+}
+.left a:hover {
+	color: #7f7f7f;
 }
 .content {
-	margin-top: 5%;
-	background-color: #1c1c1c;
-	height: 600px;
-	padding: 10px
+	width: 80%;
+}
+.right {
+	color: white;
+	width: 10%;
+	padding-top: 20%;
+	text-align: center;
+	font-size: 300%;
+}
+.right a{
+	color: white;
+}
+.right a:hover {
+	color: #7f7f7f;
 }
