--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ nav {
 	border-bottom: 1px solid #7f7f7f;
 	height: 26px;
 	background-color: black;
-	max-width: 100%
+	width: 100%
 }
 nav a {
 	float: left;
