--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ header {
 	position: sticky;
 	position: fixed;
 	background-color: black;
+	border-bottom: 1px solid #7f7f7f;
 	width: 100%;
 	z-index: 1;
 	float: left;
@@ -9,7 +10,6 @@ header {
 }
 nav {
 	border-top: 1px solid #7f7f7f;
-	border-bottom: 1px solid #7f7f7f;
 	height: 26px;
 	background-color: black;
 	width: 100%
@@ -70,6 +70,7 @@ footer {
 	color: white;
 	width: 10%;
 	padding-top: 20%;
+	padding-bottom: 2%;
 	text-align: center;
 	font-size: 300%;
 }
@@ -81,6 +82,7 @@ footer {
 }
 .content {
 	width: 80%;
+	padding-top: 2.5%;
 }
 .right a{
 	color: white;
